# pixl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap-mingw.bat  bootstrap-win.bat  build-mingw.bat  buildd-mingw.bat  buildd.sh  run.sh
.github/workflows/: count-loc.yml
core/: CMakeLists.txt
core/include/pixl/core/: Shaders.h  pixl.h  pixl3D.h
core/include/pixl/core/animation/: Animation.h
core/include/pixl/core/animation/loader/: SparrowAtlasLoader.h
core/include/pixl/core/asset/: AssetManager.h  AssetPackage.h  AudioBuffer.h  CubeMap.h  Font.h  Model.h  Texture.h  TextureAtlas.h
core/include/pixl/core/event/: Event.h  EventManager.h
core/include/pixl/core/graphics/: Camera.h  Camera3D.h  Camera3DRenderer.h  CameraRenderer.h  Drawable.h  DrawingContext.h  Framebuffer.h  Object3D.h  ParticleRenderer.h  PipelineElement.h  PostProcessingEffect.h  RenderPipeline.h  Shader.h  SimpleRenderer.h  Sprite.h  SpriteGroup.h  Text.h  VideoPlayer.h  WindowRenderer.h
core/include/pixl/core/graphics/2d/: Camera.h  CameraRenderer.h  SpriteGroup.h  Text.h  VideoPlayer.h
core/include/pixl/core/graphics/3d/: Camera3D.h  Camera3DRenderer.h  Light.h  Object3D.h  Skybox.h
core/include/pixl/core/input/: KeyCode.h  Keys.h  Mouse.h
core/include/pixl/core/math/: Mat4.h  MathFunctions.h  Rect.h  Vec2.h  Vec2i.h  Vec3.h
core/include/pixl/core/particle/: ParticleEmitter.h  ParticleSystem.h
core/include/pixl/core/sound/: Sound.h  SoundGroup.h  SoundSystem.h
core/include/pixl/core/tween/: Easing.h  Tween.h  Tweenable.h
core/include/pixl/core/window/: Window.h
core/include/pixl/reflect/: Field.h
core/src/: Core.cpp  Shaders.cpp
core/src/animation/: Animation.cpp
core/src/animation/loader/: SparrowAtlasLoader.cpp
core/src/asset/: AssetManager.cpp  AssetPackage.cpp  AudioBuffer.cpp  CubeMap.cpp  Font.cpp  Model.cpp  Texture.cpp  TextureAtlas.cpp
core/src/event/: EventManager.cpp
core/src/graphics/: Camera.cpp  Camera3D.cpp  Camera3DRenderer.cpp  CameraRenderer.cpp  DrawingContext.cpp  Framebuffer.cpp  Object3D.cpp  ParticleRenderer.cpp  PostProcessingEffect.cpp  RenderPipeline.cpp  Shader.cpp  SimpleRenderer.cpp  Sprite.cpp  SpriteGroup.cpp  Text.cpp  VideoPlayer.cpp  WindowRenderer.cpp
core/src/graphics/2d/: Camera.cpp  CameraRenderer.cpp  ParticleRenderer.cpp  SimpleRenderer.cpp  Sprite.cpp  SpriteGroup.cpp  Text.cpp  VideoPlayer.cpp  WindowRenderer.cpp
core/src/graphics/3d/: Camera3D.cpp  Camera3DRenderer.cpp  Object3D.cpp  Skybox.cpp
core/src/input/: KeyCode.cpp  Keys.cpp  Mouse.cpp
core/src/math/: Mat4.cpp  MathFunctions.cpp  Rect.cpp  Vec2.cpp  Vec2i.cpp  Vec3.cpp
core/src/particle/: ParticleSystem.cpp
core/src/reflect/: Field.cpp
core/src/sound/: Sound.cpp  SoundSystem.cpp
core/src/tween/: Easing.cpp  Tweenable.cpp
core/src/window/: Window.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
scripts/: installvcpkg-mingw.bat  installvcpkg-win.bat
utility/: CMakeLists.txt
utility/include/pixl/utility/: Axis.h  Color.h  Defs.h  Error.h  FileUtils.h  Timer.h
utility/src/: Color.cpp  Debug.cpp  Error.cpp  FileUtils.cpp  Timer.cpp
